<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dreamer</string>
    <string name="logo">logo</string>
    <string name="sign_in_discord">Iniciar con Discord</string>
    <string name="guest">Modo Invitado</string>
    <string name="title_home">Inicio</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_records">Historial</string>
    <string name="title_settings">Configuración</string>
    <string name="chapter_profile">chapter profile</string>
    <string name="title">title</string>
    <string name="chapter">chapter</string>
    <string name="type">type</string>
    <string name="search_in_directory">Buscar en Directorio…</string>
    <string name="directory">Directorio</string>
    <string name="state_of_the_app">state of the app</string>
    <string name="chapter_logo">chapter logo</string>
    <string name="servers_list">Lista de Servidores :</string>
    <string name="server_icon">server icono</string>
    <string name="welcome_player">%1$s - Capítulo número %2$d</string>
    <string name="choose_quality">Escoger calidad de Video :</string>
    <string name="full_screen">full screen</string>
    <string name="fast_forward">fast forward</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="replay">replay</string>
    <string name="anime_logo">anime logo</string>
    <string name="chapter_list">Lista de Capítulos.</string>
    <string name="lorem">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).   Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="rating">rating</string>
    <string name="year">year</string>
    <string name="state">state</string>
    <string name="cover_profile">cover profile</string>
    <string name="profile_logo">profile logo</string>
    <string name="cover_reflex">cover reflex</string>
    <string name="genre">genre</string>
    <string name="cover_image">cover image</string>
    <string name="title_series">Serie de Reproducción %1$s.</string>
    <string name="title_seeing">Estas viendo %1$s.</string>
    <string name="word_decorate">· %1$s</string>
    <string name="rating_layout">✪ %.1f</string>
    <string name="title_home_chapter">%1$s - %2$d</string>
    <string name="chapter_number">Capítulo número  %1$d</string>
    <string name="continue_watching_chapter_number">Seguir viendo desde capítulo número %1$d</string>
    <string name="cant_install_update_warning">No hay permiso de instalación, se recomienda habilitar en las propiedades del la app manualmente.</string>
    <string name="requesting_installer_permission">Solicitando, permiso para actualizar dreamer.</string>
    <string name="couldnt_open_package_installer">Error abriendo configuración de PackageInstaller</string>
    <string name="chapter_number_hint">Capítulo a buscar</string>
    <string name="chapter_number_short">Cap. %1$d</string>
    <string name="chapter_number_normal">Capítulo. %1$d</string>
    <string name="title_and_number_short">%1$s Cap. %2$d</string>
    <string name="title_and_version">%1$s.%2$f</string>
    <string name="imageview_to_checker">imageview to checker</string>
    <string name="loading">cargando..</string>
    <string name="close">close</string>
    <string name="recommendations_user">Recomendaciones habilitadas al iniciar sesión.</string>
    <string name="suggestions">Sugerencias</string>
    <string name="relaunch_play">Relanzar Video.</string>
    <string name="casting_available">¡Casting Disponible!</string>
    <string name="ad_attribution">Ad</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="terms_and_conditions">Términos y Condiciones</string>
    <string name="terms_and_conditions_content">\nNosotros no alojamos ningún archivo multimedia en esta aplicacion.  No estamos asociados con la lista de contenidos que se encuentran en servidores remotos. \n\nNo tenemos conexión o asociación con dicho contenido.Los archivos mp4, avi, mkv que están disponibles para descargar no están alojados en Dreamer y están alojados en otros servidores (por lo tanto, no en nuestro servicio de host).Cada archivo en Dreamer es solo para escuchar la investigación. \n\nEste dominio (Dreamer) funciona como un motor de búsqueda de películas y no almacena ni aloja ningún archivo u otro material con derechos de autor. \n\nSeguimos las leyes de derechos de autor, pero si encuentra resultados de búsqueda que considera ilegales, se le pide que complete el formulario y envíe un correo electrónico propuesto (en la ultima sección de las políticas de privacidad). De hecho, nos adherimos a los derechos de los productores y artistas. Le aseguramos que su trabajo será seguro y legal, lo que resultará en una experiencia positiva para cada uno de ustedes, ya sea que sea un creador o un artista musical. \n\nTenga en cuenta que si alguna persona, a sabiendas o intencionalmente, tergiversa cualquier material o actividad enumerada en la Sección 512 (f), se consideraría una violación de la ley de derechos de autor. Entonces, si lo hace, es responsable de su propio daño. Pero tenga en cuenta una cosa: ¡no haga ninguna afirmación falsa sobre el contenido infringido!  La información completa contenida en el aviso legal también se puede enviar a la parte interesada proporcionando el contenido que se está infringiendo.</string>
    <string name="legal_warning">Aviso Legal</string>
    <string name="filter">Filtrar</string>
    <string name="select_genre">Seleccionar Genero.</string>
    <string name="stateList">Lista de Estados</string>
    <string name="select_state">Seleccionar Estado.</string>
    <string name="select_type">Seleccionar Tipo.</string>
    <string name="content">content</string>
    <string name="expanded">expanded</string>
    <string name="complete_percent">100%</string>
    <string name="to_download_and_install">Descargar e Instalar</string>
    <string name="skip">Omitir</string>
    <string name="new_version">¡Nueva Versión %1$f!</string>
    <string name="enter">enter</string>
</resources>