<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="252dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/expanded_notification_title"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/expanded_notification_info"
        style="@style/TextAppearance.Compat.Notification.Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/content" />

    <ImageView
        android:id="@+id/image_view_expanded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_app"
        android:contentDescription="@string/expanded" />
</LinearLayout>