<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="?attr/colorSecondaryVariant"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="115dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imvCover_Base"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/anime_logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/media_player_holder" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_transparent_vertical_base"
                android:contentDescription="@string/cover_image" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txvTitle_Base"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="4"
            android:text="@string/title"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/txvTypeBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/type"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txvYearBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/year"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>