<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="?attr/colorSurface"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="115dp"
            android:layout_height="180dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_cover_base"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/anime_logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo_app" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundImageSmooth"
                android:contentDescription="@string/cover_image"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/title"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout" />

        <TextView
            android:id="@+id/text_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/rating"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/relative_layout"
            app:layout_constraintStart_toStartOf="@+id/relative_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>