<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/next_chapter_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardCornerRadius="64dp"
    android:backgroundTint="@color/transparentBackgroundNextChapter">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/next_chapter_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_user_account"
            android:contentDescription="@string/chapter_logo"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/text_next_chapter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/chapter_number_normal"
            android:textColor="@color/blackPrimary"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_right_back_24"
            android:padding="10dp"
            android:contentDescription="@string/enter"
            app:tint="@color/blackPrimary"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>