<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".presentation.update.UpdateActivity">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/new_version"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/downloadLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumedVersion"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lorem"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/downloadLogo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/close"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintTop_toTopOf="@+id/title" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/downloadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/downloadAndInstallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/downloadAndInstallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_rounded_20dp"
        android:text="@string/to_download_and_install"
        android:textAllCaps="false"
        android:textColor="@color/whitePrimary"
        app:backgroundTint="@color/orange_peel_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/colorSurface"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="?colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/downloadAndInstallButton"
        app:layout_constraintEnd_toStartOf="@id/downloadAndInstallButton"
        app:layout_constraintTop_toTopOf="@+id/downloadAndInstallButton" />

    <TextView
        android:id="@+id/textProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/complete_percent"
        app:layout_constraintBottom_toTopOf="@+id/downloadProgress"
        app:layout_constraintEnd_toEndOf="@+id/downloadProgress" />


</androidx.constraintlayout.widget.ConstraintLayout>